# video-3d-pipeline

./: .gitignore  CREStereo_model.txt  extract_aligned.py  extract_depth.py  main.py  pyproject.toml  readme.md  run_pipeline.py  stereo_generator.py  test_igev_full.py  test_igev_import.py  unimatch_integration.py
examples/: full_pipeline.py
src/video_3d_pipeline/: __init__.py  __main__.py  align.py  align_fast.py  convert.py  depth.py  unimatch_configs.py  unimatch_depth.py  unimatch_flow_temporal.py  upscale.py  utils.py
